# NNTest

./: .gitignore  CMakeLists.txt  NNTest.sln
NetworkTest/: NetworkTest.vcxproj  NetworkTest.vcxproj.filters  Testing.txt
NetworkTest/Src/: NeuralNetwork.h  NeuralNetworkParametres.cpp  NeuralNetworkParametres.h  main.cpp
NeuralNet/: NeuralNet.vcxproj  NeuralNet.vcxproj.filters
NeuralNet/Src/: Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h
